# taxharvest

./: pyproject.toml
data/: trades.csv
taxharvest/: __init__.py  harvester.py  portfolio.py  washsale.py
tests/: test_harvester.py  test_portfolio.py  test_washsale.py
