[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "taxharvest"
version = "0.1.0"
description = "Tax-loss harvesting portfolio rebalancer with wash sale detection"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["tax", "portfolio", "wash-sale", "rebalancing"]
dependencies = ["pandas>=2.0"]

[tool.setuptools.packages.find]
include = ["taxharvest*"]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov"]

[tool.pytest.ini_options]
testpaths = ["tests"]
